--- a/index.html
+++ b/index.html
@@ -13,6 +13,104 @@
 
 <body>
     <section class="container-fluid">
+        <div class="bg" style="display:none"></div>
+        <div class="box row" style="display:none">
+            <div class="col-lg-6 hinhanh">
+                <img id="img1" src="">
+                <div>
+                    <img id="img2" src="">
+                    <img id="img3" src="">
+                    <img id="img4" src="">
+                </div>
+            </div>
+            <div class="col-lg-6 thongtin">
+                <div>
+                <span></span><h1></h1><h4></h4>
+                <div class="feedback">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path
+                            d="M12.0011 2L15.1051 8.728L22.4631 9.601L17.0231 14.631L18.4671 21.899L12.0011 18.28L5.53506 21.9L6.97906 14.632L1.53906 9.6L8.89806 8.727L12.0011 2Z"
+                            stroke="#1565C0" stroke-linejoin="round" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path
+                            d="M12.0011 2L15.1051 8.728L22.4631 9.601L17.0231 14.631L18.4671 21.899L12.0011 18.28L5.53506 21.9L6.97906 14.632L1.53906 9.6L8.89806 8.727L12.0011 2Z"
+                            stroke="#1565C0" stroke-linejoin="round" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path
+                            d="M12.0011 2L15.1051 8.728L22.4631 9.601L17.0231 14.631L18.4671 21.899L12.0011 18.28L5.53506 21.9L6.97906 14.632L1.53906 9.6L8.89806 8.727L12.0011 2Z"
+                            stroke="#1565C0" stroke-linejoin="round" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path
+                            d="M12.0011 2L15.1051 8.728L22.4631 9.601L17.0231 14.631L18.4671 21.899L12.0011 18.28L5.53506 21.9L6.97906 14.632L1.53906 9.6L8.89806 8.727L12.0011 2Z"
+                            stroke="#1565C0" stroke-linejoin="round" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path
+                            d="M12.0011 2L15.1051 8.728L22.4631 9.601L17.0231 14.631L18.4671 21.899L12.0011 18.28L5.53506 21.9L6.97906 14.632L1.53906 9.6L8.89806 8.727L12.0011 2Z"
+                            stroke="#1565C0" stroke-linejoin="round" />
+                    </svg>
+                </div>
+                <p>Black coffee is a drink made from pure roasted coffee beans, without adding milk, sugar or any other
+                    ingredients. Black coffee has a rich bitter taste and passionate aroma, and is a favorite drink of
+                    many people around the world.</p>
+                </div>
+                <div class="thongtin-bottom">
+                    <div class="border-top"></div>
+                    <div class="Share">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="29" viewBox="0 0 38 29" fill="none">
+                            <path
+                                d="M31.6654 14.4993L21.532 6.04102V10.2702C16.4654 10.2702 6.33203 12.8077 6.33203 22.9577C6.33203 21.5476 9.37203 18.7285 21.532 18.7285V22.9577L31.6654 14.4993Z"
+                                fill="#1565C0" stroke="#1565C0" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                        <p>Share</p>
+                    </div>
+                    <div class="thongtin-contact">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none">
+                            <path
+                                d="M14 13.5H16.5L17.5 9.5H14V7.5C14 6.47 14 5.5 16 5.5H17.5V2.14C17.174 2.097 15.943 2 14.643 2C11.928 2 10 3.657 10 6.7V9.5H7V13.5H10V22H14V13.5Z"
+                                fill="#929292" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none">
+                            <path
+                                d="M10 15L15.19 12L10 9V15ZM21.56 7.17C21.69 7.64 21.78 8.27 21.84 9.07C21.91 9.87 21.94 10.56 21.94 11.16L22 12C22 14.19 21.84 15.8 21.56 16.83C21.31 17.73 20.73 18.31 19.83 18.56C19.36 18.69 18.5 18.78 17.18 18.84C15.88 18.91 14.69 18.94 13.59 18.94L12 19C7.81 19 5.2 18.84 4.17 18.56C3.27 18.31 2.69 17.73 2.44 16.83C2.31 16.36 2.22 15.73 2.16 14.93C2.09 14.13 2.06 13.44 2.06 12.84L2 12C2 9.81 2.16 8.2 2.44 7.17C2.69 6.27 3.27 5.69 4.17 5.44C4.64 5.31 5.5 5.22 6.82 5.16C8.12 5.09 9.31 5.06 10.41 5.06L12 5C16.19 5 18.8 5.16 19.83 5.44C20.73 5.69 21.31 6.27 21.56 7.17Z"
+                                fill="#929292" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 20 20" fill="none">
+                            <g clip-path="url(#clip0_91_433)">
+                                <path
+                                    d="M4.38875 8.1375C4.77865 6.95787 5.53113 5.93151 6.53885 5.20483C7.54656 4.47815 8.75803 4.08828 10.0004 4.09083C11.4088 4.09083 12.6821 4.59083 13.6821 5.40917L16.5921 2.5C14.8188 0.954167 12.5463 0 10.0004 0C6.05875 0 2.66542 2.24833 1.03375 5.54167L4.38875 8.1375ZM13.3671 15.0108C12.4588 15.5967 11.3054 15.9092 10.0004 15.9092C8.76298 15.9117 7.55609 15.5249 6.55061 14.8036C5.54514 14.0823 4.79204 13.063 4.39792 11.89L1.03125 14.4458C1.85729 16.1177 3.13564 17.5245 4.7211 18.5063C6.30656 19.4881 8.13559 20.0056 10.0004 20C12.4446 20 14.7796 19.1308 16.5288 17.5L13.3671 15.0108ZM16.5288 17.5C18.3579 15.7933 19.5454 13.2533 19.5454 10C19.5454 9.40833 19.4546 8.7725 19.3188 8.18167H10.0004V12.0458H15.3638C15.0996 13.345 14.3879 14.3508 13.3671 15.0108L16.5288 17.5Z"
+                                    fill="#929292" />
+                                <path
+                                    d="M4.3976 11.8893C4.19373 11.2801 4.09016 10.6418 4.09093 9.99935C4.09093 9.34768 4.1951 8.72185 4.38843 8.13685L1.03343 5.54102C0.347079 6.92659 -0.00673329 8.45311 9.70454e-05 9.99935C9.70454e-05 11.5993 0.37093 13.1077 1.03093 14.4452L4.3976 11.8893Z"
+                                    fill="#929292" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_91_433">
+                                    <rect width="20" height="20" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none">
+                            <g clip-path="url(#clip0_91_429)">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M14 2C14.5304 2 15.0391 2.21071 15.4142 2.58579C15.7893 2.96086 16 3.46957 16 4C16.0005 4.69111 16.2393 5.36091 16.6761 5.89647C17.113 6.43202 17.7211 6.80058 18.398 6.94C18.9178 7.04556 19.3744 7.35329 19.6674 7.7955C19.9603 8.23771 20.0656 8.77818 19.96 9.298C19.8544 9.81782 19.5467 10.2744 19.1045 10.5674C18.6623 10.8603 18.1218 10.9656 17.602 10.86C17.0483 10.7473 16.5103 10.5677 16 10.325V16C16 17.1222 15.6852 18.222 15.0914 19.1743C14.4976 20.1265 13.6487 20.8932 12.641 21.3872C11.6334 21.8812 10.5074 22.0827 9.39093 21.9687C8.27449 21.8548 7.21238 21.4301 6.32525 20.7428C5.43812 20.0554 4.76154 19.1331 4.37235 18.0805C3.98317 17.0279 3.89699 15.8873 4.1236 14.7881C4.35022 13.689 4.88054 12.6755 5.65433 11.8627C6.42812 11.0499 7.41435 10.4704 8.501 10.19C9.01142 10.0669 9.54977 10.1495 9.99984 10.4198C10.4499 10.6902 10.7756 11.1268 10.9066 11.6352C11.0376 12.1436 10.9635 12.6832 10.7001 13.1374C10.4368 13.5917 10.0053 13.9241 9.499 14.063C9.03018 14.1874 8.62246 14.4778 8.35162 14.8802C8.08078 15.2826 7.96523 15.7696 8.02646 16.2508C8.0877 16.7319 8.32153 17.1745 8.68452 17.4962C9.04751 17.818 9.51496 17.997 10 18C10.5304 18 11.0391 17.7893 11.4142 17.4142C11.7893 17.0391 12 16.5304 12 16V4C12 3.46957 12.2107 2.96086 12.5858 2.58579C12.9609 2.21071 13.4696 2 14 2Z"
+                                    fill="#929292" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_91_429">
+                                    <rect width="24" height="24" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         <div class="row">
             <div class="col-lg-6" style="display: flex;flex-direction: column;height: 100vh;">
                 <div class="logo">
@@ -23,7 +121,7 @@
                     <div class="table premium">
                         <div class="ribbon"><span>Total Money</span></div>
                         <div class="price-section">
-                          <h1>100.000.000 vnđ</h1>
+                            <h1>100.000.000 vnđ</h1>
                         </div>
                         <div class="package-name c2"></div>
                         <div class="contact">
@@ -33,7 +131,8 @@
                             <i class="bi bi-facebook"></i>
                             <p>fb.com/lhub304</p>
                         </div>
-                    </div><div class="table premium" style="padding: 10px 0;">
+                    </div>
+                    <div class="table premium" style="padding: 10px 0;">
                         <div class="contactqr">
                             <div class="qr">
                                 <img src="photo/qr.png">
@@ -48,7 +147,7 @@
                 </div>
                 <div class="bught">
                     <div class="bughtwrap row">
-                        
+
                     </div>
                 </div>
             </div>
@@ -77,7 +176,7 @@
                                     <p>2</p>
                                     <p>BXC</p>
                                     <p>1.500.000</p>
-                                     <p>08:30 27/12/2023</p>
+                                    <p>08:30 27/12/2023</p>
                                     <p>BUI XUAN CANH<br><span>da chuyen khoan</span></p>
                                 </li>
                                 <li>
